welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:14: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
		} recule();
                  ^